# untitled_engine

./: CMakeLists.txt  README.md  common.h  main.cpp
Components/: Health.h  Speed.h  Translation.h  Vector3.h
ECS/: Archetype.cpp  Archetype.h  Archetype.tpp  Chunk.cpp  Chunk.h  Chunk.tpp  ComponentArray.cpp  ComponentArray.h  ComponentType.h  ComponentType.tpp  Entity.cpp  Entity.h  EntityManager.h  EntityManager.tpp
Math/: Vector3.h
app/: TestSystem.cpp  TestSystem.h  main.cpp
app/include/: CollisionSystem.h  MoveForwardSystem.cpp  MoveForwardSystem.h  PlayerMovementSystem.h  TestSystem.h  TimedDeleteSystem.h
app/include/Components/: DeleteTime.h  Enemy.h  MoveForwardTag.h  Player.h
app/src/: main.cpp
engine/include/: common.h
engine/include/Components/: Speed.h
engine/include/Core/: Time.h  TimeSystem.cpp  TimeSystem.h
engine/include/ECS/: Archetype.h  Chunk.h  ComponentType.h  Entity.h  EntityData.h  EntityManager.h  EntitySystem.h  IEntitySystem.h  ISystem.h  System.h  SystemThread.h
engine/include/ECS/Components/: Rotation.cpp  Rotation.h  Scale.h  Translation.h
engine/include/ECS/tpp/: Archetype.tpp  Chunk.tpp  EntityManager.tpp  EntitySystem.tpp  System.tpp
engine/include/Input/: InputSystem.h
engine/include/Math/: Vector3.h
engine/include/Render/: Mesh.h  QueryFamilyIndices.cpp  QueryFamilyIndices.h  RenderSystem.h  Renderable.h  SwapChainSupportDetails.cpp  SwapChainSupportDetails.h  UniformBufferObject.cpp  UniformBufferObject.h  Vertex.cpp  Vertex.h
engine/shaders/: compile.sh  shader.vert
engine/src/ECS/: Archetype.cpp  Chunk.cpp  Entity.cpp  EntityData.cpp  EntityManager.cpp  ISystem.cpp  System.cpp  SystemThread.cpp
engine/src/Input/: InputSystem.cpp
include/: common.h
include/Components/: Health.h  Translation.h
include/ECS/: Archetype.h  Archetype.tpp  Chunk.h  Chunk.tpp  ComponentType.h  ComponentType.tpp  EntityManager.h  System.h
include/ECS/tpp/: Archetype.tpp  Chunk.tpp  EntityManager.tpp  System.tpp
src/: main.cpp
src/ECS/: Archetype.cpp  Chunk.cpp
